feat/Add website contents

--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
     <div class="container">
         <div class="recipe-card">
             <a href="./recipe1.html">
-                <div>image</div>
-                <h2>Loreum ipsum</h2>
+                <div>
+                    <img src="./assests/images/tomato-soup.jpg" alt="tomato soup"/>
+                </div>
+                <h2>4-Ingredient Creamy Tomato Soup for Two</h2>
             </a>
         </div>
         <div class="recipe-card">
             <a href="./recipe2.html">
-                <div>image</div>
-                <h2>Loreum ipsum</h2>
+                <div>
+                    <img src="./assests/images/ice-coffee.jpg" alt="ice coffee" />
+                </div>
+                <h2>Reverse Dalgona Iced Coffee</h2>
             </a>
         </div>
         <div class="recipe-card">
             <a href="./recipe3.html">
-                <div>image</div>
-                <h2>Loreum ipsum</h2>
+                <div>
+                    <img src="./assests/images/pancakes.jpg" alt="samosa" >
+                </div>
+                <h2>Good Old-Fashioned Pancakes </h2>
             </a>
         </div>
     </div>
