--- a/recipe1.html
+++ b/recipe1.html
@@ -3,11 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>4-Ingredient Creamy Tomato Soup for Two</title>
+    <link rel="stylesheet" href="./assests/style.css">
 </head>
 <body>
-    Recipe 1
+    <h1>4-Ingredient Creamy Tomato Soup for Two</h1>
+    <div class="modal">Soup</div>
+    <div class="info-bar">
+        <p>Prep time: 10 mins</p>
+        <p>Cook Time: 30 mins</p>
+        <p>Servings: 2</p>
+    </div>
 
-    <a href="index.html">Main page</a>
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>
+
+            1/2 onion, quartered
+            </li>
+        <li>
+
+            1 (14.5 ounce) can diced tomatoes with basil, garlic, and olive oil
+            </li>
+        <li>
+
+            2 teaspoons butter
+            </li>
+        <li>1/4 cup heavy cream, divided</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>
+            Preheat the oven to 375 degrees F (190 degrees C).
+        </li>
+        <li>
+            Roughly quarter the onion half, and separate the pieces. 
+            Place onion pieces on a baking tray. 
+            Open the can of diced tomatoes. Carefully drizzle some 
+            of the liquid onto the onion. 
+        </li>
+        <li>
+            Roast onions in the preheated oven until soft, 
+            about 25 minutes. Place onions and tomatoes in a 
+            high-powered blender. Cover tightly and blend on 
+            high for 40 seconds. 
+        </li>
+        <li>
+            Melt butter in a saucepan over medium heat. Carefully 
+            pour in the tomato mixture, and cook, stirring 
+            occasionally until hot, about 3 minutes. Stir in 3 
+            tablespoons cream. 
+        </li>
+        <li>
+            Ladle soup into bowls, and drizzle remaining cream 
+            over each serving. 
+        </li>
+  
+    </ol>
+
+    <h5><a href="index.html">Main page</a></h5>
 </body>
 </html>
