--- a/recipe2.html
+++ b/recipe2.html
@@ -6,7 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    Recipe 2
+    <h2>Reverse Dalgona Iced Coffee</h2>
+    <div>Drinks</div>
+    <div class="info-bar">
+        <p>Prep time: 5 mins</p>
+        <p>Servings: 1</p>
+    </div>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 tablespoon instant coffee granules</li>
+        <li>1 tablespoon white sugar
+        </li>
+        <li>2 tablespoons water        </li>
+        <li>1/2 cup ice</li>
+        <li>1/2 cup milk</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>
+            Place coffee, sugar, and water, in that order, in a tall 
+            glass. Using a hand-held milk frother, froth mixture until 
+            light and fluffy, 1 to 3 minutes.
+        </li>
+        <li>
+            Add ice cubes to the glass, then pour milk over top.
+        </li>
+    </ol>
 
     <a href="index.html">Main page</a>
 </body>
