--- a/recipe3.html
+++ b/recipe3.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Good Old-Fashioned Pancakes</title>
 </head>
 <body>
-    Recipe 3
+    <h1>Good Old-Fashioned Pancakes</h1>
+    <div>Breakfast</div>
+    <div class="info-bar">
+        <p>Prep time: 5 mins</p>
+        <p>Cook time: 15 mins</p>
+        <p>Servings: 8</p>
+    </div>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1.5 cups all-purpose flour</li>
+        <li>
+
+            3.5 teaspoons baking powder
+            </li>
+        <li>
+
+            1 tablespoon white sugar
+            </li>
+        <li>1/4 teaspoon salt, or more to taste </li>
+        <li>1 1/4 cups milk</li>
+        <li>3 tablespoons butter</li>
+        <li>1 large egg</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>
+            Sift flour, baking powder, sugar, and salt together in a 
+            large bowl. Make a well in the center and add milk, melted 
+            butter, and egg; mix until smooth. 
+        </li>
+        <li>
+            Heat a lightly oiled griddle or pan over medium-high heat. 
+            Pour or scoop the batter onto the griddle, using 
+            approximately 1/4 cup for each pancake; cook until bubbles 
+            form and the edges are dry, about 2 to 3 minutes. 
+            Flip and cook until browned on the other side. Repeat 
+            with remaining batter. 
+        </li>
+    </ol>
     <a href="index.html">Main page</a>
 </body>
 </html>
