feat/Add styling

--- a/recipe1.html
+++ b/recipe1.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4-Ingredient Creamy Tomato Soup for Two</title>
     <link rel="stylesheet" href="./assests/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>4-Ingredient Creamy Tomato Soup for Two</h1>
@@ -15,6 +18,12 @@
         <p>Servings: 2</p>
     </div>
 
+    <p>
+        This tasty 4-ingredient creamy tomato soup for two blends roasted 
+        onion with canned tomatoes and cream. 
+    </p>
+    <div class="main-recipe">
+    <div class="recipe-part">
     <h2>Ingredients</h2>
 
     <ul>
@@ -32,7 +41,8 @@
             </li>
         <li>1/4 cup heavy cream, divided</li>
     </ul>
-
+</div>
+<div class="recipe-part">
     <h2>Directions</h2>
     <ol>
         <li>
@@ -62,7 +72,8 @@
         </li>
   
     </ol>
-
+</div>
+</div>
     <h5><a href="index.html">Main page</a></h5>
 </body>
 </html>
