--- a/recipe2.html
+++ b/recipe2.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reverse Dalgona Iced Coffee</title>
+    <link rel="stylesheet" href="./assests/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <h2>Reverse Dalgona Iced Coffee</h2>
-    <div>Drinks</div>
+    <div class="modal">Drinks</div>
     <div class="info-bar">
         <p>Prep time: 5 mins</p>
         <p>Servings: 1</p>
     </div>
-    <h2>Ingredients</h2>
+    <p>
+        This whipped coffee is made in the same glass that it is served in.
+    </p>
+    <div class="main-recipe">
+        <div class="recipe-part">
+            <h2>Ingredients</h2>
     <ul>
         <li>1 tablespoon instant coffee granules</li>
         <li>1 tablespoon white sugar
@@ -21,8 +32,9 @@
         <li>1/2 cup ice</li>
         <li>1/2 cup milk</li>
     </ul>
-
-    <h2>Directions</h2>
+        </div>
+        <div class="recipe-part">
+            <h2>Directions</h2>
     <ol>
         <li>
             Place coffee, sugar, and water, in that order, in a tall 
@@ -33,7 +45,12 @@
             Add ice cubes to the glass, then pour milk over top.
         </li>
     </ol>
+        </div>
+    </div>
+    
 
-    <a href="index.html">Main page</a>
+    
+
+    <h5><a href="index.html">Main page</a></h5>
 </body>
 </html>
