--- a/recipe3.html
+++ b/recipe3.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good Old-Fashioned Pancakes</title>
+    <link rel="stylesheet" href="./assests/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Good Old-Fashioned Pancakes</h1>
-    <div>Breakfast</div>
+    <div class="modal">Breakfast</div>
     <div class="info-bar">
         <p>Prep time: 5 mins</p>
         <p>Cook time: 15 mins</p>
         <p>Servings: 8</p>
     </div>
 
-    <h2>Ingredients</h2>
+    <p>
+        This recipe makes think, delicious and fluffy pancakes.
+    </p>
+    <div class="main-recipe">
+        <div class="recipe-part">
+            <h2>Ingredients</h2>
     <ul>
         <li>1.5 cups all-purpose flour</li>
         <li>
@@ -30,8 +40,9 @@
         <li>3 tablespoons butter</li>
         <li>1 large egg</li>
     </ul>
-
-    <h2>Directions</h2>
+        </div>
+        <div class="recipe-part">
+            <h2>Directions</h2>
     <ol>
         <li>
             Sift flour, baking powder, sugar, and salt together in a 
@@ -47,6 +58,12 @@
             with remaining batter. 
         </li>
     </ol>
-    <a href="index.html">Main page</a>
+        </div>
+    </div>
+
+    
+
+    
+   <h5> <a href="index.html">Main page</a></h5>
 </body>
 </html>
